--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <title>Github Issue Visualizer</title>
     <meta charset="utf-8">
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.12/css/all.css" integrity="sha384-G0fIWCsCzJIMAVNQPfjH08cyYaUtMwjJwqiRKxxE/rx96Uroj1BtIQ6MLJuheaO9" crossorigin="anonymous">
   </head>
   <body>
     <div id="app"></div>
